--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js">
+<html class="no-js" data-ng-app="urssApp">
 <head>
     <meta charset="utf-8">
     <title>Ultimate RSS</title>
@@ -22,7 +22,7 @@
 
     <!-- TODO Stylesheets injected via gulp inject - Do not touch this section -->
     <!-- inject:css -->
-    <link rel="stylesheet" href=".tmp/styles/urss.css">
+    <link rel="stylesheet" href=".tmp/styles/urssApp.css">
     <!-- endinject -->
 
     <!-- endbuild -->
@@ -31,11 +31,11 @@
 
     <main class="ui stackable center aligned page grid">
         <h1>My RSS</h1>
-        <section class="ui celled grid">
+        <section class="ui grid">
             <div class="row">
                 <!-- Search bar -->
                 <aside class="four wide column">
-                    <div class="ui action input">
+                    <div class="ui segment action input">
                         <input type="text" title="Search" placeholder="Search"/>
 
                         <div class="ui right labeled icon button">Search<i class="search icon"></i></div>
@@ -83,14 +83,14 @@
     <!-- endbuild -->
 
     <!-- TODO This will contain all the source files -->
-    <!-- build:js scripts/urss.js -->
+    <!-- build:js scripts/urssApp.js -->
     <!-- Include external sources here if needed -->
 
     <!-- TODO Injected sources injected via gulp inject - Do not touch this section -->
     <!-- inject:js -->
-    <script src=".tmp/scripts/urss.js"></script>
-    <script src=".tmp/scripts/urss.json.js"></script>
-    <script src=".tmp/scripts/urss.tpl.js"></script>
+    <script src=".tmp/scripts/urssApp.min.js"></script>
+    <script src=".tmp/scripts/urssApp.json.js"></script>
+    <script src=".tmp/scripts/urssApp.tpl.js"></script>
     <!-- endinject -->
     <!-- endbuild -->
 
