chore(gulp): fixing gulp tasks

--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,7 @@
 
     <!-- TODO Stylesheets injected via gulp inject - Do not touch this section -->
     <!-- inject:css -->
-    <link rel="stylesheet" href=".tmp/styles/urssApp.css">
+    <link rel="stylesheet" href=".tmp/styles/urssApp.min.css">
     <!-- endinject -->
 
     <!-- endbuild -->
@@ -82,6 +82,7 @@
     <!-- TODO Injected sources injected via gulp inject - Do not touch this section -->
     <!-- inject:js -->
     <script src=".tmp/scripts/urssApp.min.js"></script>
+    <script src=".tmp/scripts/urssApp.json.js"></script>
     <script src=".tmp/scripts/urssApp.tpl.js"></script>
     <!-- endinject -->
     <!-- endbuild -->
