feat(feedHistoryModule): Directive to show the history of feeds

--- a/app/index.html
+++ b/app/index.html
@@ -33,10 +33,12 @@
         <h1>My RSS</h1>
         <section class="ui grid">
             <div class="row">
-
+                <aside class="six wide column">
+                    <feed-history></feed-history>
+                </aside>
 
                 <!-- Content -->
-                <aside class="twelve wide column">
+                <aside class="ten wide column">
                     <div class="ui segment">
                         <header class="ui center aligned vertical segment">
                             <h1 class="ui header">URL 1</h1>
@@ -82,7 +84,6 @@
     <!-- TODO Injected sources injected via gulp inject - Do not touch this section -->
     <!-- inject:js -->
     <script src=".tmp/scripts/urssApp.min.js"></script>
-    <script src=".tmp/scripts/urssApp.json.js"></script>
     <script src=".tmp/scripts/urssApp.tpl.js"></script>
     <!-- endinject -->
     <!-- endbuild -->
