feat(validateDuplicates): adding duplicate validation

--- a/app/index.html
+++ b/app/index.html
@@ -74,6 +74,8 @@
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/semantic-ui/dist/semantic.js"></script>
     <script src="bower_components/angular-filter/dist/angular-filter.js"></script>
+    <script src="bower_components/ui-router/release/angular-ui-router.js"></script>
+    <script src="bower_components/angular-messages/angular-messages.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
