feat(feedViewer): adding feedviewer directive

--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
 <body>
 
     <main class="ui stackable center aligned page grid">
-        <h1>My RSS</h1>
+        <h1 class="ui header">Ultimate RSS Reader</h1>
         <section class="ui grid">
             <div class="row">
                 <aside class="six wide column">
@@ -39,24 +39,7 @@
 
                 <!-- Content -->
                 <aside class="ten wide column">
-                    <div class="ui segment">
-                        <header class="ui center aligned vertical segment">
-                            <h1 class="ui header">URL 1</h1>
-                        </header>
-
-                        <article class="ui segment">
-                            <header class="ui header">
-                                <h3>Title - 17/09/14</h3>
-                            </header>
-
-                            <p class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet corporis delectus earum harum
-                                               libero? Deleniti ducimus eius et, ipsam laborum praesentium repellendus. Eos facilis nihil
-                                               nulla? Accusantium
-                                               atque incidunt veritatis.</p>
-                        </article>
-
-                    </div>
-
+                    <feed-viewer></feed-viewer>
                 </aside>
             </div>
         </section>
