style(header): fix the main header and add an icon

--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,14 @@
 <body>
 
     <main class="ui stackable center aligned page grid">
-        <h1 class="ui header">Ultimate RSS Reader</h1>
+
+        <header class="sixteen wide column">
+            <div class="ui center aligned huge icon header">
+                <i class="circular feed icon"></i>
+                Ultimate RSS Reader
+            </div>
+        </header>
+
         <section class="ui grid">
             <div class="row">
                 <aside class="six wide column">
