feat(feedHistory): sticky feed

--- a/app/index.html
+++ b/app/index.html
@@ -41,7 +41,7 @@
         <section class="ui grid">
             <div class="row">
                 <aside class="six wide column">
-                    <feed-history></feed-history>
+                    <feed-history class="ui sticky fixed"></feed-history>
                 </aside>
 
                 <!-- Content -->
