--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
     <meta name="description" content="Urss : ">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <link rel="stylesheet" href="bower_components/urss-mallowigi/dist/styles/vendor.css"/>
+    <link rel="stylesheet" href="bower_components/urss-mallowigi/dist/styles/urss.css"/>
 
     <title>Urss</title>
 </head>
 
 <body>
-
+    <script src="bower_components/urss-mallowigi/dist/scripts/vendor.js"></script>
+    <script src="bower_components/urss-mallowigi/dist/scripts/urssApp.js"></script>
 </body>
 </html>
