--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <title>Urss</title>
 </head>
 
-<body ng-app="urssApp">
+<body>
 
-    <main class="ui stackable center aligned page grid">
+    <main class="ui stackable center aligned page grid"  ng-app="urssApp">
 
         <header class="sixteen wide column">
             <div class="ui center aligned huge icon header">
